# cpp-warships

./: .clang-format  .gitignore  CMakeLists.txt  GameController.cpp  GameController.h  GameState.cpp  GameState.h  GameView.cpp  GameView.h  Makefile  MenuGameState.cpp  MenuGameState.h  OngoingGameState.cpp  OngoingGameState.h  README.md  WarShips.cpp  build.sh  input-commands.txt  main.cpp  readme.md  truegamecontroller.cpp
cpp_warships/game_saves/: CMakeLists.txt  README.md
cpp_warships/game_saves/example/: TestClass.h
cpp_warships/game_saves/include/: ISerializable.h  ISerializer.h  SerializerAggregator.h
cpp_warships/game_saves/include/example/: ImplicitTestClass.h  TestClass.h
cpp_warships/game_saves/include/exceptions/: DeserializationException.h  InterpretationException.h  SerializationException.h
cpp_warships/game_saves/include/helpers/: TupleBuilder.h
cpp_warships/game_saves/src/: source.cpp
cpp_warships/game_saves/tests/: main.cpp
cpp_warships/input_parser/: CMakeLists.txt
cpp_warships/input_parser/include/: CommandParser.h  DefaultHelp.h  DefaultParserError.h  VoidParser.h
cpp_warships/input_parser/include/builder/: CommandBuildDirector.h  ConfigCommandBuilder.h  DefaultParameterBuilder.h  ParameterBuildDirector.h  ParserBuilderDirector.h  ParserCommandBuilder.h  ParserParameterBuilder.h
cpp_warships/input_parser/include/command/: ArgumentsErrorCommand.h  Command.h  ErrorCommand.h  HelpCommand.h  ParserCommand.h
cpp_warships/input_parser/include/model/: Parser.h  ParserCommandInfo.h  ParserParameter.h
cpp_warships/input_parser/src/: CommandParser.cpp  DefaultHelp.cpp  DefaultParserError.cpp  Parser.h  ParserParameter.h  VoidParser.cpp
cpp_warships/input_parser/src/builder/: DefaultParameterBuilder.h  ParserCommandBuilder.h
cpp_warships/input_parser/src/command/: ArgumentsErrorCommand.cpp  CommandParser.cpp  CommandParser.h  ErrorCommand.cpp  HelpCommand.cpp
cpp_warships/input_parser/src/void/: VoidParser.cpp  VoidParser.h
cpp_warships/input_parser/tests/: main.cpp
cpp_warships/input_reader/: CMakeLists.txt
cpp_warships/input_reader/include/: InputReader.h
cpp_warships/input_reader/include/command_reader/: CommandInputReader.h
cpp_warships/input_reader/include/config_reader/: ConfigInputReader.h
cpp_warships/input_reader/include/console_reader/: ConsoleInputReader.h
cpp_warships/input_reader/src/command_reader/: CommandInputReader.cpp
cpp_warships/input_reader/src/config_reader/: ConfigInputReader.cpp
cpp_warships/input_reader/src/console_reader/: ConsoleInputReader.cpp
cpp_warships/input_reader/tests/: main.cpp
cpp_warships/saves/: CMakeLists.txt
cpp_warships/saves/src/: Serializer.h  SerializerFactory.h
cpp_warships/saves/tests/: main.cpp
cpp_warships/utilities/: CMakeLists.txt
cpp_warships/utilities/include/: FieldCoordinateHelper.h  Initials.h  StateMessages.h  StringHelper.h  TypesHelper.h
cpp_warships/utilities/src/: FieldCoordinateHelper.cpp  FieldCoordinateHelper.h  Initials.h  StateMessages.cpp  StateMessages.h  StringHelper.cpp  StringHelper.h  TypesHelper.cpp  TypesHelper.h  ViewHelper.cpp  ViewHelper.h
cpp_warships/utilities/tests/: main.cpp
executables/application/: CMakeLists.txt  main.cpp
executables/application/controller/: AttackHandler.cpp  AttackHandler.h  BattleController.cpp  BattleController.h  GameController.h  MatchBuilder.cpp  MatchBuilder.h  MatchSettingsController.cpp  MatchSettingsController.h  PlaceShipController.cpp  PlaceShipController.h  ShipManager.cpp  ShipManager.h
executables/application/controller/game-states/: GameState.cpp  GameState.h  MenuGameState.cpp  MenuGameState.h  OngoingGameState.cpp  OngoingGameState.h  ShutdownGameState.cpp  TransitGameState.cpp  TransitGameState.h
executables/application/controller/game_states/: GameState.cpp  GameState.h  MenuGameState.cpp  MenuGameState.h  OngoingGameState.cpp  OngoingGameState.h  ShutdownGameState.cpp  ShutdownGameState.h  TransitGameState.cpp  TransitGameState.h
executables/application/controller/ongoing-game-substates/: BattleOngoingGameSubState.cpp  BattleOngoingGameSubState.h  FinishOngoingGameSubState.h  InitiateOngoingGameSubState.cpp  InitiateOngoingGameSubState.h  NewMatchSettingsSubState.cpp  NewMatchSettingsSubState.h  PauseOngoingGameSubState.cpp  PauseOngoingGameSubState.h
executables/application/controller/ongoing_game_substates/: BattleOngoingGameSubState.cpp  BattleOngoingGameSubState.h  FinishOngoingGameSubState.cpp  InitiateOngoingGameSubState.cpp  InitiateOngoingGameSubState.h  NewMatchSettingsSubState.cpp  NewMatchSettingsSubState.h  OngoingGameSubState.cpp  OngoingGameSubState.h  PauseOngoingGameSubState.cpp  (+1 more)
executables/application/include/: AttackHandler.h  BattleController.h  BattleView.h  ComputerPlayer.h  GameController.h  GameField.h  GameFieldView.h  GameSaveCreator.h  GameStateDTO.h  MatchSettings.h  MatchSettingsController.h  PlaceShipController.h  PlaceShipControllerView.h  Player.h  PlayerFieldState.h  Segment.h  Ship.h  ShipManager.h  ShipManagerView.h
executables/application/model/: ComputerPlayer.cpp  ComputerPlayer.h  Player.cpp  Player.h  PlayerFieldState.cpp  PlayerFieldState.h  StateContext.cpp  StateContext.h  Structures.cpp  Structures.h  SubStateContext.cpp  SubStateContext.h
executables/application/src/: AttackHandler.cpp  BattleController.cpp  BattleView.cpp  ComputerPlayer.cpp  FieldCellView.cpp  GameField.cpp  GameFieldView.cpp  GamePauseView.cpp  GameSaveCreator.cpp  GameStateDTO.cpp  MatchSettings.cpp  MatchSettingsController.cpp  PlaceShipController.cpp  PlaceShipControllerView.cpp  Player.cpp  PlayerFieldState.cpp  Segment.cpp  Ship.cpp  ShipManager.cpp  ShipManagerView.cpp  Structures.cpp
executables/application/view/: BattleView.cpp  BattleView.h  FieldCellView.cpp  FieldCellView.h  GameFieldView.cpp  GameFieldView.h  GamePauseView.cpp  GamePauseView.h  PlaceShipControllerView.cpp  PlaceShipControllerView.h  ShipManagerView.cpp  ShipManagerView.h  SkillManagerView.cpp  SkillManagerView.h
executables/showcases/: CMakeLists.txt  serialization.cpp
(+369 files in other folders)
