cmake_minimum_required(VERSION 3.22.1)
project(cpp_warships)

set(CMAKE_CXX_STANDARD 17)

include_directories(.)
include_directories(controller)
include_directories(library)
include_directories(library/parser)
include_directories(library/parser-builder)
include_directories(library/defaults)
include_directories(model)
include_directories(view)
include_directories(view/game-states)
include_directories(view/model)

add_executable(cpp_warships
        main.cpp
        library/ViewHelper.cpp
        library/ViewHelper.h
        library/parser/ParserParameter.cpp
        library/parser/ParserParameter.h
        library/parser/ParserCommandInfo.cpp
        library/parser/ParserCommandInfo.h
        library/parser/Parser.cpp
        library/parser/Parser.h
        library/StringHelper.cpp
        library/StringHelper.h
        library/TypesHelper.cpp
        library/TypesHelper.h
        library/parser-builder/ParserCommandBuilder.cpp
        library/parser-builder/ParserCommandBuilder.h
        library/parser-builder/ConfigCommandBuilder.cpp
        library/parser-builder/ConfigCommandBuilder.h
        library/parser-builder/ParserBuilderDirector.cpp
        library/parser-builder/ParserBuilderDirector.h
        library/parser-builder/ParserParameterBuilder.cpp
        library/parser-builder/ParserParameterBuilder.h
        library/parser-builder/DefaultParameterBuilder.cpp
        library/parser-builder/DefaultParameterBuilder.h
        library/parser-builder/CommandBuildDirector.cpp
        library/parser-builder/CommandBuildDirector.h
        library/parser-builder/ParameterBuildDirector.cpp
        library/parser-builder/ParameterBuildDirector.h
        library/parser/__showcase__/parserShowcase.h
        library/parser/__showcase__/parserShowcaseInline.h
        library/defaults/DefaultHelp.cpp
        library/defaults/DefaultHelp.h
        library/defaults/DefaultParserError.cpp
        library/defaults/DefaultParserError.h
        controller/game-states/MenuGameState.cpp
        controller/game-states/MenuGameState.h
        controller/game-states/GameState.cpp
        controller/game-states/GameState.h
        controller/game-states/OngoingGameState.cpp
        controller/game-states/OngoingGameState.h
        controller/game-states/ShutdownGameState.cpp
        controller/game-states/ShutdownGameState.h
        controller/BattleController.cpp
        controller/BattleController.h
        controller/ongoing-game-substates/BattleOngoingGameSubstate.cpp
        controller/ongoing-game-substates/BattleOngoingGameSubstate.h
        controller/ongoing-game-substates/FinishOngoingGameSubstate.cpp
        controller/ongoing-game-substates/FinishOngoingGameSubstate.h
        controller/ongoing-game-substates/InitiateOngoingGameSubstate.cpp
        controller/ongoing-game-substates/InitiateOngoingGameSubstate.h
        controller/ongoing-game-substates/NewMatchSettingsSubState.cpp
        controller/ongoing-game-substates/NewMatchSettingsSubState.h
        controller/ongoing-game-substates/PauseOngoingGameSubstate.cpp
        controller/ongoing-game-substates/PauseOngoingGameSubstate.h
        controller/PlaceShipController.cpp
        controller/PlaceShipController.h
        controller/MatchSettingsController.cpp
        controller/MatchSettingsController.h
        controller/GameController.cpp
        controller/GameController.h
        model/GameField.cpp
        model/GameField.h
        model/GameStateDTO.cpp
        model/GameStateDTO.h
        model/MatchSettings.cpp
        model/MatchSettings.h
        model/Player.cpp
        model/Player.h
        model/Segment.cpp
        model/Segment.h
        model/Ship.cpp
        model/Ship.h
        model/ShipManager.cpp
        model/ShipManager.h
        model/StateContext.cpp
        model/StateContext.h
        model/Structures.cpp
        model/Structures.h
        view/game-states/GameView.cpp
        view/game-states/GameView.h
        view/game-states/OngoingGameView.cpp
        view/game-states/OngoingGameView.h
        view/game-states/ShutdownGameView.cpp
        view/game-states/ShutdownGameView.h
        view/game-substates/InitiateOngoingGameView.cpp
        view/game-substates/InitiateOngoingGameView.h
        #        view/game-substates/BattleOngoingGameSubState.cpp
#        view/game-substates/BattleOngoingGameSubState.h
#        view/game-substates/FinishOngoingGameSubState.cpp
#        view/game-substates/FinishOngoingGameSubState.h
        view/model/GameFieldView.cpp
        view/model/GameFieldView.h
        library/defaults/Initials.h
        model/DoubleDamage.h
        model/DoubleDamage.cpp
        model/Scanner.cpp
        model/Scanner.h
        model/ShootingRandomlySkill.cpp
        model/ShootingRandomlySkill.h
        model/SkillManager.h
        model/SkillManager.cpp
        model/SkillFactory.h
        model/Skill.h
        model/Skill.cpp
        library/defaults/ShipPlacementException.h
        library/defaults/ShipPlacementException.cpp
        library/defaults/SkillException.h
        library/defaults/SkillException.cpp
        library/defaults/BattleException.h
        library/defaults/BattleException.cpp
        model/ComputerPlayer.h
        model/ComputerPlayer.cpp
        library/defaults/FieldCoordinateHelper.h
        library/defaults/FieldCoordinateHelper.cpp
        library/defaults/StateMessages.cpp
        library/defaults/StateMessages.h
        controller/ongoing-game-substates/OngoingGameSubState.cpp
        controller/ongoing-game-substates/OngoingGameSubState.h
        model/SubStateContext.cpp
        model/SubStateContext.h
        controller/ongoing-game-substates/NewMatchSettingsSubState.h
)
