cmake_minimum_required(VERSION 3.22.1)
project(cpp_warships)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")

include_directories(.)
include_directories(src/controller/)
include_directories(src/library)
include_directories(src/library/parser)
include_directories(src/library/parser-builder)
include_directories(src/library/defaults)
include_directories(src/model)
include_directories(src/view)
include_directories(src/view/game-states)
include_directories(src/view/model)


include(FetchContent)

FetchContent_Declare(
        nlohmann_json
        GIT_REPOSITORY https://github.com/nlohmann/json.git
        GIT_TAG v3.10.0
)

FetchContent_MakeAvailable(nlohmann_json)

add_executable(cpp_warships main.cpp
        src/library/ViewHelper.cpp
        src/library/ViewHelper.h
        src/library/parser/ParserParameter.h
        src/library/parser/ParserCommandInfo.h
        src/library/parser/Parser.h
        src/library/StringHelper.cpp
        src/library/StringHelper.h
        src/library/TypesHelper.cpp
        src/library/TypesHelper.h
        src/library/parser-builder/ParserCommandBuilder.h
        src/library/parser-builder/ConfigCommandBuilder.h
        src/library/parser-builder/ParserBuilderDirector.h
        src/library/parser-builder/ParserParameterBuilder.h
        src/library/parser-builder/DefaultParameterBuilder.h
        src/library/parser-builder/CommandBuildDirector.h
        src/library/parser-builder/ParameterBuildDirector.h
        src/library/parser/__showcase__/parserShowcase.h
        src/library/parser/__showcase__/parserShowcaseInline.h
        src/library/defaults/DefaultHelp.cpp
        src/library/defaults/DefaultHelp.h
        src/library/defaults/DefaultParserError.cpp
        src/library/defaults/DefaultParserError.h
        src/controller/game-states/MenuGameState.cpp
        src/controller/game-states/MenuGameState.h
        src/controller/game-states/GameState.cpp
        src/controller/game-states/GameState.h
        src/controller/game-states/OngoingGameState.cpp
        src/controller/game-states/OngoingGameState.h
        src/controller/game-states/ShutdownGameState.cpp
        src/controller/game-states/ShutdownGameState.h
        src/controller/BattleController.cpp
        src/controller/BattleController.h
        src/controller/ongoing-game-substates/BattleOngoingGameSubState.cpp
        src/controller/ongoing-game-substates/BattleOngoingGameSubState.h
        src/controller/ongoing-game-substates/FinishOngoingGameSubState.cpp
        src/controller/ongoing-game-substates/FinishOngoingGameSubState.h
        src/controller/ongoing-game-substates/InitiateOngoingGameSubState.cpp
        src/controller/ongoing-game-substates/InitiateOngoingGameSubState.h
        src/controller/ongoing-game-substates/NewMatchSettingsSubState.cpp
        src/controller/ongoing-game-substates/NewMatchSettingsSubState.h
        src/controller/ongoing-game-substates/PauseOngoingGameSubState.cpp
        src/controller/ongoing-game-substates/PauseOngoingGameSubState.h
        src/controller/PlaceShipController.cpp
        src/controller/PlaceShipController.h
        src/controller/MatchSettingsController.cpp
        src/controller/MatchSettingsController.h
        src/controller/GameController.h
        src/model/game/GameField.cpp
        src/model/game/GameField.h
        src/model/game/GameStateDTO.cpp
        src/model/game/GameStateDTO.h
        src/model/game/MatchSettings.cpp
        src/model/game/MatchSettings.h
        src/model/Player.cpp
        src/model/Player.h
        src/model/game/Segment.cpp
        src/model/game/Segment.h
        src/model/game/Ship.cpp
        src/model/game/Ship.h
        src/controller/ShipManager.cpp
        src/controller/ShipManager.h
        src/model/StateContext.cpp
        src/model/StateContext.h
        src/model/Structures.cpp
        src/model/Structures.h
        src/view/game-states/GameView.cpp
        src/view/game-states/GameView.h
        src/view/game-states/OngoingGameView.cpp
        src/view/game-states/OngoingGameView.h
        src/view/game-states/ShutdownGameView.cpp
        src/view/game-states/ShutdownGameView.h
        src/view/game-substates/InitiateOngoingGameView.cpp
        src/view/game-substates/InitiateOngoingGameView.h
        src/view/GameFieldView.cpp
        src/view/GameFieldView.h
        src/library/defaults/Initials.h
        src/model/skills/DoubleDamage.h
        src/model/skills/DoubleDamage.cpp
        src/model/skills/Scanner.cpp
        src/model/skills/Scanner.h
        src/model/skills/ShootingRandomlySkill.cpp
        src/model/skills/ShootingRandomlySkill.h
        src/model/skills/SkillManager.h
        src/model/skills/SkillManager.cpp
        src/model/skills/SkillFactory.h
        src/model/skills/Skill.h
        src/model/skills/Skill.cpp
        src/model/exceptions/ShipPlacementException.h
        src/model/exceptions/ShipPlacementException.cpp
        src/model/exceptions/SkillException.h
        src/model/exceptions/SkillException.cpp
        src/model/exceptions/BattleException.h
        src/model/exceptions/BattleException.cpp
        src/model/ComputerPlayer.h
        src/model/ComputerPlayer.cpp
        src/library/defaults/FieldCoordinateHelper.h
        src/library/defaults/FieldCoordinateHelper.cpp
        src/library/defaults/StateMessages.cpp
        src/library/defaults/StateMessages.h
        src/controller/ongoing-game-substates/OngoingGameSubState.cpp
        src/controller/ongoing-game-substates/OngoingGameSubState.h
        src/model/SubStateContext.cpp
        src/model/SubStateContext.h
        src/controller/ongoing-game-substates/NewMatchSettingsSubState.h
        src/view/FieldCellView.cpp
        src/view/FieldCellView.h
        src/view/PlaceShipControllerView.cpp
        src/view/PlaceShipControllerView.h
        src/model/PlayerFieldState.cpp
        src/model/PlayerFieldState.h
        src/controller/AttackHandler.cpp
        src/controller/AttackHandler.h
        src/view/SkillManagerView.cpp
        src/view/SkillManagerView.h
        src/model/save/Serializer.h
        src/controller/save/GameSaveCreator.h
        src/controller/save/GameSaveCreator.cpp
        src/controller/save/SerializerManager.cpp
        src/controller/save/SerializerManager.h
        src/model/save/SerializerGameField.h
        src/model/save/SerializerGameField.cpp
        src/model/save/Serializer.cpp
        src/model/save/SerializerMatchSettings.h
        src/model/save/SerializerMatchSettings.cpp
        src/controller/save/SerializerSkillManager.h
        src/model/save/SerializerSimplifyObjects.h
        src/model/save/SerializerSimplifyObjects.cpp
        src/controller/save/SerializerSkillManager.cpp
        src/model/save/SerializerFactory.h
        src/controller/save/JsonFileHandler.h
        src/controller/save/JsonFileHandler.cpp
        src/view/ShipManagerView.cpp
        src/controller/MatchBuilder.cpp
        src/controller/MatchBuilder.h
        src/view/GamePauseView.cpp
        src/view/GamePauseView.h
        src/view/BattleView.cpp
        src/view/BattleView.h
        src/controller/game-states/TransitGameState.cpp
        src/controller/game-states/TransitGameState.h
        src/library/parser/command/ParserCommandWrapper.cpp
        src/library/parser/command/ParserCommandWrapper.h
        src/library/Command.h
        src/library/parser/command/CommandParser.cpp
        src/library/parser/command/CommandParser.h
        src/library/parser/void/VoidParser.cpp
        src/library/parser/void/VoidParser.h
        src/library/input-reader/InputReader.h
        src/library/parser/ParserCommand.h
        src/library/parser/command/helpers/HelpCommand.cpp
        src/library/parser/command/helpers/HelpCommand.h
        src/library/parser/command/helpers/ErrorCommand.cpp
        src/library/parser/command/helpers/ErrorCommand.h
        src/library/parser/command/helpers/ArgumentsErrorCommand.cpp
        src/library/parser/command/helpers/ArgumentsErrorCommand.h
        src/library/input-reader/console/ConsoleInputReader.cpp
        src/library/input-reader/console/ConsoleInputReader.h
        src/library/input-reader/config/ConfigInputReader.cpp
        src/library/input-reader/config/ConfigInputReader.h
        src/library/input-reader/command/CommandInputReader.cpp
        src/library/input-reader/command/CommandInputReader.h
)

target_link_libraries(cpp_warships PRIVATE nlohmann_json::nlohmann_json)