# Compile files
add_executable(cpp_warships main.cpp
        controller/game_states/MenuGameState.cpp
        controller/game_states/MenuGameState.h
        controller/game_states/GameState.cpp
        controller/game_states/GameState.h
        controller/game_states/OngoingGameState.cpp
        controller/game_states/OngoingGameState.h
        controller/game_states/ShutdownGameState.cpp
        controller/game_states/ShutdownGameState.h
        controller/BattleController.cpp
        controller/BattleController.h
        controller/ongoing_game_substates/BattleOngoingGameSubState.cpp
        controller/ongoing_game_substates/BattleOngoingGameSubState.h
        controller/ongoing_game_substates/FinishOngoingGameSubState.cpp
        controller/ongoing_game_substates/FinishOngoingGameSubState.h
        controller/ongoing_game_substates/InitiateOngoingGameSubState.cpp
        controller/ongoing_game_substates/InitiateOngoingGameSubState.h
        controller/ongoing_game_substates/NewMatchSettingsSubState.cpp
        controller/ongoing_game_substates/NewMatchSettingsSubState.h
        controller/ongoing_game_substates/PauseOngoingGameSubState.cpp
        controller/ongoing_game_substates/PauseOngoingGameSubState.h
        controller/PlaceShipController.cpp
        controller/PlaceShipController.h
        controller/MatchSettingsController.cpp
        controller/MatchSettingsController.h
        controller/GameController.h
        model/game/GameField.cpp
        model/game/GameField.h
        model/game/GameStateDTO.cpp
        model/game/GameStateDTO.h
        model/game/MatchSettings.cpp
        model/game/MatchSettings.h
        model/Player.cpp
        model/Player.h
        model/game/Segment.cpp
        model/game/Segment.h
        model/game/Ship.cpp
        model/game/Ship.h
        controller/ShipManager.cpp
        controller/ShipManager.h
        model/StateContext.cpp
        model/StateContext.h
        model/Structures.cpp
        model/Structures.h
        view/game_states/GameView.cpp
        view/game_states/GameView.h
        view/game_states/OngoingGameView.cpp
        view/game_states/OngoingGameView.h
        view/game_states/ShutdownGameView.cpp
        view/game_states/ShutdownGameView.h
        view/game_substates/InitiateOngoingGameView.cpp
        view/game_substates/InitiateOngoingGameView.h
        view/GameFieldView.cpp
        view/GameFieldView.h
        model/skills/DoubleDamage.h
        model/skills/DoubleDamage.cpp
        model/skills/Scanner.cpp
        model/skills/Scanner.h
        model/skills/ShootingRandomlySkill.cpp
        model/skills/ShootingRandomlySkill.h
        model/skills/SkillManager.h
        model/skills/SkillManager.cpp
        model/skills/SkillFactory.h
        model/skills/Skill.h
        model/skills/Skill.cpp
        model/exceptions/ShipPlacementException.h
        model/exceptions/ShipPlacementException.cpp
        model/exceptions/SkillException.h
        model/exceptions/SkillException.cpp
        model/exceptions/BattleException.h
        model/exceptions/BattleException.cpp
        model/ComputerPlayer.h
        model/ComputerPlayer.cpp
        controller/ongoing_game_substates/OngoingGameSubState.cpp
        controller/ongoing_game_substates/OngoingGameSubState.h
        model/SubStateContext.cpp
        model/SubStateContext.h
        controller/ongoing_game_substates/NewMatchSettingsSubState.h
        view/FieldCellView.cpp
        view/FieldCellView.h
        view/PlaceShipControllerView.cpp
        view/PlaceShipControllerView.h
        model/PlayerFieldState.cpp
        model/PlayerFieldState.h
        controller/AttackHandler.cpp
        controller/AttackHandler.h
        view/SkillManagerView.cpp
        view/SkillManagerView.h
        model/save/Serializer.h
        controller/save/GameSaveCreator.h
        controller/save/GameSaveCreator.cpp
        controller/save/SerializerManager.cpp
        controller/save/SerializerManager.h
        model/save/SerializerGameField.h
        model/save/SerializerGameField.cpp
        model/save/Serializer.cpp
        model/save/SerializerMatchSettings.h
        model/save/SerializerMatchSettings.cpp
        controller/save/SerializerSkillManager.h
        model/save/SerializerSimplifyObjects.h
        model/save/SerializerSimplifyObjects.cpp
        controller/save/SerializerSkillManager.cpp
        model/save/SerializerFactory.h
        controller/save/JsonFileHandler.h
        controller/save/JsonFileHandler.cpp
        view/ShipManagerView.cpp
        controller/MatchBuilder.cpp
        controller/MatchBuilder.h
        view/GamePauseView.cpp
        view/GamePauseView.h
        view/BattleView.cpp
        view/BattleView.h
        controller/game_states/TransitGameState.cpp
        controller/game_states/TransitGameState.h
)

# Link dependencies
target_link_libraries(cpp_warships PRIVATE
        nlohmann_json::nlohmann_json
        utilities
        input_parser
        input_reader
        game_saves
        cxx_setup
)
